apex/grammar.js
    parser_output: ($) => repeat($.declaration),

    // Expressions

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                ">>=",
                ">>>="
              ),
              $.assignment_operator
            )
          ),
          field("right", $.expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          ["==", PREC.EQUALITY],
          ["===", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["!==", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          [">>>", PREC.SHIFT],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression)
            )
          )
        )
      ),

    field_access: ($) =>
      seq(
        field("object", choice($.primary_expression, $.super)),
        optional(seq($._property_navigation, $.super)),
        $._property_navigation,
        field("field", choice($.identifier, $.this))
      ),

    _property_navigation: ($) => seq(optional("?"), "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            optional(seq($.super, $._property_navigation)),
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier)
          )
        ),
        field("arguments", $.argument_list)
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    return_statement: ($) => seq(ci("return"), optional($.expression), ";"),

    annotation: ($) =>
      seq(
        "@",
        field("name", $._name),
        optional(field("arguments", $.annotation_argument_list))
      ),

    annotation_argument_list: ($) =>
      seq(
        "(",
        choice(
          field("value", $._element_value),
          joined(optional(","), $.annotation_key_value)
        ),
        ")"
      ),
    annotation_key_value: ($) =>
      seq(
        field("key", $.identifier),
        alias("=", $.assignment_operator),
        field("value", $._element_value)
      ),

    _element_value: ($) =>
      prec(
        PREC.ELEMENT_VAL,
        choice($.expression, $.element_value_array_initializer, $.annotation)
      ),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body)
      ),

    modifiers: ($) =>
      repeat1(
        choice(
          $.annotation,
          ci("global"),
          ci("public"),
          ci("testMethod"),
          ci("protected"),
          ci("override"),
          ci("private"),
          ci("virtual"),
          ci("abstract"),
          ci("static"),
          ci("final"),
          ci("transient"),
          seq(ci("with"), ci("sharing")), // TODO: class only
          seq(ci("without"), ci("sharing")),
          seq(ci("inherited"), ci("sharing"))
        )
      ),

    superclass: ($) => seq(ci("extends"), $._type),

    interfaces: ($) => seq(ci("implements"), $.type_list),

    type_list: ($) => seq($._type, repeat(seq(",", $._type))),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";"
      ),

    static_initializer: ($) => seq(ci("static"), $.block),

    constructor_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._constructor_declarator,
        field("body", $.constructor_body)
      ),

    _constructor_declarator: ($) =>
      seq(
        field("type_parameters", optional($.type_parameters)),
        field("name", $.identifier),
        field("parameters", $.formal_parameters)
      ),

    constructor_body: ($) =>
      seq(
        "{",
        optional($.explicit_constructor_invocation),
        repeat($.statement),
        "}"
      ),

    explicit_constructor_invocation: ($) =>
      seq(
        choice(
          seq(
            field("type_arguments", optional($.type_arguments)),
            field("constructor", choice($.this, $.super))
          ),
          seq(
            field("object", choice($.primary_expression)),
            ".",
            field("type_arguments", optional($.type_arguments)),
            field("constructor", $.super)
          )
        ),
        field("arguments", $.argument_list),
        ";"
      ),

    _name: ($) => choice($.identifier, $.scoped_identifier),

    field_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        choice($.accessor_list, ";")
      ),

    interface_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("interface"),
        field("name", $.identifier),
        field("type_parameters", optional($.type_parameters)),
        optional($.extends_interfaces),
        field("body", $.interface_body)
      ),

    extends_interfaces: ($) => seq(ci("extends"), $.type_list),

    interface_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.constant_declaration,
            $.enum_declaration,
            $.method_declaration,
            $.class_declaration,
            $.interface_declaration,
            ";"
          )
        ),
        "}"
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer)
          )
        )
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions))
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _type: ($) => choice($._unannotated_type, $.annotated_type),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    void_type: ($) => ci("void"),
    _method_header: ($) =>
      seq(
        optional(
          seq(field("type_parameters", $.type_parameters), repeat($.annotation))
        ),
        field("type", $._unannotated_type),
        $._method_declarator
      ),

    formal_parameters: ($) => seq("(", commaJoined($.formal_parameter), ")"),

    formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id
      ),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";"
      ),

    method_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._method_header,
        choice(field("body", $.block), ";")
      ),

    this: ($) => ci("this"),

    super: ($) => ci("super"),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    line_comment: ($) => token(prec(PREC.COMMENT, seq("//", /[^\n]*/))),

    block_comment: ($) =>
      token(prec(PREC.COMMENT, seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfF"'_%\\]|[^\\'])*'/,
  },
});
